votar comentarios swagger
